test/zinc_source/compile_errors/modules/_cycle/a.zn
import compile_errors/modules/_cycle/b

fn ping() {
    return pong()
}
